fix: sonar qube issues fixes
Refs: XRDDEV-2805